--- a/public/index.css
+++ b/public/index.css
@@ -5,18 +5,12 @@
 body {
   color: #333;
   line-height: 1.5;
+  box-sizing: border-box;
 }
 
 .container {
   max-width: 900px;
   margin: 0 auto;
-}
-
-h1 {
-  text-align: center;
-}
-
-form {
 }
 
 textarea {
